# qt-logging-and-cmake

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt
src/Common/Configuration/: CMakeLists.txt  ConfigurationManager.h
src/Common/Logger/: AbstractLogger.h  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  LogManager.cpp  LogManager.h
test/: CMakeLists.txt
test/Common/: CMakeLists.txt
test/Common/Configuration/: CMakeLists.txt  ConfigurationManager_Test.cpp  ConfigurationManager_Test.h
test/Common/Logger/: CMakeLists.txt  FileLogger_Test.cpp  FileLogger_Test.h
